--- a/forreal.css
+++ b/forreal.css
@@ -7,30 +7,52 @@ header h1 {font-size: 25px; ; }
 #link {position: relative;
 float: right; bottom: 25px; word-spacing: 10px ;}
 
+
+
+
+
+
 a{text-decoration: none;}
 
 body{height: 2000px; background-color: tan; width: 1000px;}
 
-#Dashboard { border: 5px solid black; width: 300px; line-height: 30px;
-margin-top: 40px;  background-color: white; margin-left: 20px;
-float: left; height: 100%;}
+#Dashboard { border: 5px solid black; width: 300px; line-height: 26.5px;
+ background-color: white;
+ margin:10px; 
+ }
 
-.moreinfo {text-align: center; border-width: 100px; background: yellow; text-decoration-color: white;width: 250px; margin: 20px auto; padding: 5px; ;}
+ #budget {border:5px solid black; background:white;line-height: 30px;margin:10px;width: 300px;}
 
-#budget {  border:5px solid black;width: 300px; float: left; margin-top: 35px; line-height: 35px; background-color: white;margin-left: 20px;height: 100%;}
 
-#checkbooks {border: 5px solid black; float: left; width:300px; margin-left: 20px; background-color: white;line-height: 30px; margin-top: 30px; border-spacing: 20px;height: 100%;}
+
+
+#checkbooks {border: 5px solid black;  width:300px;  background-color: white;line-height: 30px;margin:10px;  }
+
+
+
+
+
+
+
+
+#top3 { height: 550px; display: flex; justify-content: flex-start; align-items: flex-start; justify-content: space-between; margin:10px; }
+
+
+#money { border:5px solid black; width: 300px;  background-color: white; line-height: 40px; margin:10px; }
+
+#love {border:5px solid black; width: 300px;  background-color: white; line-height: 40px; margin:10px;}
+
+
+#hate {border:5px solid black; width: 300px;  background-color: white; line-height: 40px; margin:10px;}
+
+
+ #nextthree {display: flex; align-items: flex-start; }
+
+ #photos {display: flex; padding: 100px; justify-content: space-between;}
+
 
 .para {margin-left: 10px; margin-right:10px;}
 
-#money { border:5px solid black; width: 300px; margin-top: 700px; background-color: white; margin-left: 20px; line-height: 35px; float: left;}
+.moreinfo {text-align: center; border-width: 100px; background: yellow; text-decoration-color: white;width: 250px; margin: 20px auto; padding: 5px; ;}
 
-#love {border: 5px solid black; width: 300px; float: left; background-color: white; margin-left: 20px;
-}
 
-#youngthug {border: 5px solid black; width: 300px; float: left;background-color: white;
-}
-
-#poppa {border: 5px solid black; width: 300px; float: left; background-color: white;}
-
-#top3 { height: 550px; }
